--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.jasper</groupId>
 	<artifactId>java-jasper-reports</artifactId>
 	<version>1.0-SNAPSHOT</version>
@@ -35,7 +35,6 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
@@ -43,6 +42,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>java-jasper-reports</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -64,5 +64,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
